# nowoterm

./: .gitignore  README.md  render.yaml
apps/cms/: .env.example  pyproject.toml
apps/cms/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py
apps/cms/app/routers/: __init__.py  admin.py  content.py  export.py  health.py  media.py
apps/cms/app/static/: admin.css  admin.js
apps/cms/app/templates/: base.html  case_study_form.html  dashboard.html  login.html  media.html  page_form.html  project_form.html
apps/cms/tests/: test_app.py
apps/web/: astro.config.mjs  package-lock.json  package.json  vercel.json
apps/web/public/: robots.txt
apps/web/public/scripts/: main.js
apps/web/src/components/: ContentBlocks.astro  Footer.astro  Header.astro
apps/web/src/data/: content-fallback.json
apps/web/src/layouts/: Layout.astro
apps/web/src/lib/: cms.ts
apps/web/src/pages/: [slug].astro  generalne-wykonawstwo.astro  index.astro  kontakt.astro  o-firmie.astro  proces.astro  realizacje.astro  specjalizacje-hale-biurowe.astro  specjalizacje-izolacje-pur.astro  (+2 more)
novoterm-site/: generalne-wykonawstwo.html  index.html  kontakt.html  o-firmie.html  proces.html  realizacje.html  specjalizacje-hale-biurowe.html  specjalizacje-izolacje-pur.html  specjalizacje-obiekty-przemyslowe.html  specjalizacje-sucha-zabudowa.html
novoterm-site/js/: main.js
scripts/: migrate_legacy_to_astro.py
supabase/: config.toml  seed.sql  seed_site_content.sql
supabase/migrations/: 20260721_add_project_sort_order.sql
supabase/schemas/: cms.sql
(+5 files in other folders)
