[project]
name = "novoterm-cms"
version = "0.1.0"
description = "Własny CMS Novoterm: FastAPI, PostgreSQL i publikacja do Vercel."
requires-python = ">=3.12"
dependencies = [
  "aiosqlite",
  "fastapi",
  "greenlet",
  "httpx",
  "itsdangerous",
  "jinja2",
  "psycopg[binary,pool]",
  "pydantic-settings",
  "python-multipart",
  "sqlalchemy",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
